--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,28 +4,23 @@
   <div class="row">
   <div class="col-sm-4">
         <div class="navbar-header">
-            <a [routerLink]="['/Home']" class="navbar-brand" style="color:white;padding-top:0px;">HOME</a>
+            <!-- <a [routerLink]="['/Home']" class="navbar-brand" style="color:white;padding-top:0px;">HOME</a> -->
       </div>
   </div>
   <div class="col-sm-8">
   
   
-<!--             <ul class="nav nav-pills" role="tablist" "> 
-  <li><a [routerLink]="['/Aboutus']"  style="color:orange;">ABOUT US</a></li> 
-           
-         <li><a [routerLink]="['/STEP']"  style="color:orange;">STEP</a></li> 
-  
-               <li><a [routerLink]="['/ngo']"  style="color:orange;">NGOs</a></li>  
-  
-         <li><a [routerLink]="['/admin']"  style="color:orange;">ADMIN</a></li> 
-  
-        <li><a [routerLink]="['/faq']"  style="color:orange;">FAQ</a></li> 
-  
-      <li><a [routerLink]="['/contactus']"  style="color:orange;">Contact Us</a></li> 
-      </ul> 
-    -->
+             <ul class="nav nav-pills" role="tablist"> 
+ 
+  <li><a [routerLink]="['']"  style="color:orange;">Home</a></li> 
+  <li><a [routerLink]="['step']"  style="color:orange;">STEP</a></li> 
+  <li><a [routerLink]="['ngo']"  style="color:orange;">NGO</a></li> 
+  <li><a [routerLink]="['faq']"  style="color:orange;">FAQ</a></li> 
+  <li><a [routerLink]="['legislation']"  style="color:orange;">Legislation</a></li> 
+  <li><a [routerLink]="['about']"  style="color:orange;">ABOUT US</a></li> 
+</ul>
+
   </div>
   </div>
     </div>
   </nav>
-  
