Deleted unnecessary folder (#4)
* Added about and faq of homepage

* Deleted unnessesary files

* added indentation

Co-authored-by: bharathi143 <60427576+bharathi143@users.noreply.github.com>

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,21 @@
-<p>header works!</p>
 <nav class="navbar navbar-inverse" style="background-color:#00008B">
-    <div class="container-fluid" style="height:51px;margin-top:15px;padding-top: 20px;">
-  <div class="row">
-  <div class="col-sm-4">
+  <div class="container-fluid" style="height:51px;margin-top:15px;padding-top: 20px;">
+    <div class="row">
+      <div class="col-sm-4">
         <div class="navbar-header">
-            <!-- <a [routerLink]="['/Home']" class="navbar-brand" style="color:white;padding-top:0px;">HOME</a> -->
+          <!-- <a [routerLink]="['/Home']" class="navbar-brand" style="color:white;padding-top:0px;">HOME</a> -->
+        </div>
       </div>
-  </div>
-  <div class="col-sm-8">
-  
-  
-             <ul class="nav nav-pills" role="tablist"> 
- 
-  <li><a [routerLink]="['']"  style="color:orange;">Home</a></li> 
-  <li><a [routerLink]="['step']"  style="color:orange;">STEP</a></li> 
-  <li><a [routerLink]="['ngo']"  style="color:orange;">NGO</a></li> 
-  <li><a [routerLink]="['faq']"  style="color:orange;">FAQ</a></li> 
-  <li><a [routerLink]="['legislation']"  style="color:orange;">Legislation</a></li> 
-  <li><a [routerLink]="['about']"  style="color:orange;">ABOUT US</a></li> 
-</ul>
-
-  </div>
-  </div>
+      <div class="col-sm-8">
+        <ul class="nav nav-pills" role="tablist">
+          <li><a [routerLink]="['']" class="navbar-brand" style="color:white;padding-top:0px;">Home</a></li>
+          <li><a [routerLink]="['step']" style="color:orange;">STEP</a></li>
+          <li><a [routerLink]="['ngo']" style="color:orange;">NGO</a></li>
+          <li><a [routerLink]="['faq']" style="color:orange;">FAQ</a></li>
+          <li><a [routerLink]="['legislation']" style="color:orange;">Legislation</a></li>
+          <li><a [routerLink]="['about']" style="color:orange;">ABOUT US</a></li>
+        </ul>
+      </div>
     </div>
-  </nav>
+  </div>
+</nav>
