Added register page

--- a/src/app/ngo/ngoContent/register/register.component.html
+++ b/src/app/ngo/ngoContent/register/register.component.html
@@ -1,1 +1,27 @@
 <p>register works!</p>
+<div class="card mt-5" style="margin:auto;width: 600px;">
+    <div class="card-body">
+      <h5 class="card-title">Login</h5>
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" class="form-control" id="ngoname" placeholder="Ngo Name">
+      </div>
+      <div class="form-group">
+        <label for="ngoemail">Email</label>
+        <input type="text" class="form-control" id="ngoemail" placeholder="Email Address">
+      </div>
+      <div class="form-group">
+        <label for="contact">Contact No. </label>
+        <input type="number" class="form-control" id="contact" placeholder="Contact Number">
+      </div>
+      <div class="form-group">
+        <label for="certificate">NGO certificate Number</label>
+        <input type="number" class="form-control" id="certnum" placeholder="certificate number">
+      </div>
+      <div class="form-group">
+        <label for="email">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="ngoregister()">Register</button>
+    </div>
+  </div>
