--- a/src/app/step/stepContent/registration/registration.component.html
+++ b/src/app/step/stepContent/registration/registration.component.html
@@ -1,1 +1,28 @@
 <p>registration works!</p>
+<p>register works!</p>
+<div class="card mt-5" style="margin:auto;width: 600px;">
+    <div class="card-body">
+      <h5 class="card-title">Login</h5>
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" class="form-control" id="stepname" placeholder="step Name">
+      </div>
+      <div class="form-group">
+        <label for="stepemail">Email</label>
+        <input type="text" class="form-control" id="stepemail" placeholder="Email Address">
+      </div>
+      <div class="form-group">
+        <label for="contact">Contact No. </label>
+        <input type="number" class="form-control" id="contact" placeholder="Contact Number">
+      </div>
+      <div class="form-group">
+        <label for="certificate">Adhar Card number</label>
+        <input type="number" class="form-control" id="adharnum" placeholder="Adhar number">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="steppassword" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="stepregister()">Register</button>
+    </div>
+  </div>
