--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,7 @@
           <li><a [routerLink]="['faq']" style="color:orange;">FAQ</a></li>
           <li><a [routerLink]="['legislation']" style="color:orange;">Legislation</a></li>
           <li><a [routerLink]="['about']" style="color:orange;">ABOUT US</a></li>
+          <li><a [routerLink]="['login']" style="color:orange;">Login</a></li>
         </ul>
       </div>
     </div>
