Added changes in Html

--- a/src/app/step/step/step.component.html
+++ b/src/app/step/step/step.component.html
@@ -11,13 +11,21 @@
 
     <nav class="navbar navbar-inverse" style="background-color:	brown">
         <div class="container-fluid" style="height:65px;margin-top:15px;padding-top: 20px;">
-      <div class="row">
-      <div class="col-sm-4">
-            
-      </div>
-      <div class="col-sm-8">
+      
+        <div class="navbar-header">
           
-      </div>
+        
+      
+        <ul class="nav nav-pills" role="tablist"  style="float:right;"> 
+          <li><a  [routerLink]="['/step/stepabout']" style="color:orange;">About Us</a></li>   
+          <li><a  [routerLink]="['/step/guidelines']" style="color:orange;">Guidelines</a></li>
+          <li><a  [routerLink]="['/step/training']" style="color:orange;">Training Sectors</a></li>
+         <li><a [routerLink]="['']" style="color:orange;">NGOs</a></li> 
+         <li><a [routerLink]="['/step/registration']"  style="color:orange;">Registration</a></li>
+          <li><a [routerLink]="['']" style="color:orange;">Status</a></li>
+         <li><a [routerLink]="['/step/stepfaq']" style="color:orange;">FAQ</a></li> 
+       </ul>
+      
       </div>
         </div>
       </nav>
