--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -9,13 +9,15 @@
     </div>
     <nav class="navbar navbar-inverse" style="background-color:	brown">
         <div class="container-fluid" style="height:65px;margin-top:15px;padding-top: 20px;">
-      <div class="row">
-      <div class="col-sm-4">
-            
-      </div>
-      <div class="col-sm-8">
-          
-      </div>
+          <div class="navbar-header">
+          <ul class="nav nav-pills" role="tablist"  style="float:right;"> 
+            <li><a  [routerLink]="['/ngo/criteria']" style="color:orange;">Criteria</a></li>   
+            <li><a  [routerLink]="['/ngo/organisation']" style="color:orange;">Organizations</a></li>
+            <li><a  [routerLink]="['/ngo/funding']" style="color:orange;">Funding Norms</a></li>
+           <li><a [routerLink]="['/ngo/registration']"  style="color:orange;">Registration</a></li>
+            <li><a [routerLink]="['']" style="color:orange;">Status</a></li>
+           <li><a [routerLink]="['/ngo/ngofaq']" style="color:orange;">FAQ</a></li> 
+         </ul>
       </div>
         </div>
       </nav>
