Added Step modification (#9)
* Added register page

* Added Step And Ngo Content

* Added changes in Html

Co-authored-by: shubham4u <196shubhamjadhav@gmail.com>

--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -9,13 +9,19 @@
     </div>
     <nav class="navbar navbar-inverse" style="background-color:	brown">
         <div class="container-fluid" style="height:65px;margin-top:15px;padding-top: 20px;">
-      <div class="row">
-      <div class="col-sm-4">
-            
-      </div>
-      <div class="col-sm-8">
-          
-      </div>
+
+          <div class="navbar-header">
+          <ul class="nav nav-pills" role="tablist"  style="float:right;"> 
+            <li><a  [routerLink]="['/ngo/criteria']" style="color:orange;">Criteria</a></li>   
+            <li><a  [routerLink]="['/ngo/organisation']" style="color:orange;">Organizations</a></li>
+            <li><a  [routerLink]="['/ngo/funding']" style="color:orange;">Funding Norms</a></li>
+           <li><a [routerLink]="['/ngo/registration']"  style="color:orange;">Registration</a></li>
+            <li><a [routerLink]="['']" style="color:orange;">Status</a></li>
+           <li><a [routerLink]="['/ngo/ngofaq']" style="color:orange;">FAQ</a></li> 
+         </ul>
+
+     
+
       </div>
         </div>
       </nav>
@@ -54,5 +60,3 @@
       <img class="mySlides" src="2.jpg" style=" width: 100%;height:450px;">
       <img class="mySlides" src="4.jpg" style=" width:100%;height:450px;">-->
       
-      </div>    
-
