Added header to NGO and STEP (#11)
* Added register page

* Added Step And Ngo Content

* Added changes in Html

* Added NGO and Step header

Co-authored-by: bharathi143 <60427576+bharathi143@users.noreply.github.com>

--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -1,46 +1,18 @@
-<div class="container-fluid"> 
-    <div class="row" style="height:90px;background-color:brown;padding-top: 10px; color:white;text-align:center;">
-       <div class="col-lg-12">  
-       
-           <h1>Non Governmental Organization (NGO)</h1>
-       
-    </div>
-    </div>
-    </div>
-    <nav class="navbar navbar-inverse" style="background-color:	brown">
-        <div class="container-fluid" style="height:65px;margin-top:15px;padding-top: 20px;">
-
-          <div class="navbar-header">
-          <ul class="nav nav-pills" role="tablist"  style="float:right;"> 
-            <li><a  [routerLink]="['/ngo/criteria']" style="color:orange;">Criteria</a></li>   
-            <li><a  [routerLink]="['/ngo/organisation']" style="color:orange;">Organizations</a></li>
-            <li><a  [routerLink]="['/ngo/funding']" style="color:orange;">Funding Norms</a></li>
-           <li><a [routerLink]="['/ngo/registration']"  style="color:orange;">Registration</a></li>
-            <li><a [routerLink]="['']" style="color:orange;">Status</a></li>
-           <li><a [routerLink]="['/ngo/ngofaq']" style="color:orange;">FAQ</a></li> 
-         </ul>
-
-     
-
-      </div>
-        </div>
-      </nav>
-      
-      <div class="box">
-      
-      <h3>What is NGO and how it works?</h3>
-      <pre>
+<app-header></app-header>
+<div class="box">
+  <h3>What is NGO and how it works?</h3>
+  <pre>
       <p> NGO is a non-profit organization which works towards the betterment of society. 
       It's a broad term. NGO's are organized on a local, national and international level to serve specific local and political issues. 
       NGO's rely on various sources for funding projects, and salaries.</p></pre>
-      
-      <h3>What is the main purpose of NGO?</h3>
-      <pre>
+
+  <h3>What is the main purpose of NGO?</h3>
+  <pre>
       <p> The primary purpose of an Advocacy NGO is to defend or promote a specific cause. 
       As opposed to operational project management, these organizations typically try to raise awareness, acceptance and knowledge by lobbying, press work and activist event.</p></pre>
-        <img src="/assets/3.jpg" class="center">
-      <h3>What are the functions of NGOs?</h3>
-      <pre>
+  <img src="/assets/3.jpg" class="center">
+  <h3>What are the functions of NGOs?</h3>
+  <pre>
       <p> 1. provide free education to the poor or economically backward children
       
       2. conduct free classes in small groups to the poor children
@@ -55,8 +27,8 @@
       
       Many NGOs in India offer jobs to the people at various levels. 
       Offering voluntary service in an NGO gives satisfaction and a chance to work for the society or for a social cause.</p></pre>
-      
-      <!--<img src="/assets/4.jpg" class="center1">
+
+  <!--<img src="/assets/4.jpg" class="center1">
       <img class="mySlides" src="2.jpg" style=" width: 100%;height:450px;">
       <img class="mySlides" src="4.jpg" style=" width:100%;height:450px;">-->
-      
+</div>
