--- a/src/app/ngo/ngoContent/fundingnorms/fundingnorms.component.html
+++ b/src/app/ngo/ngoContent/fundingnorms/fundingnorms.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class=container>
         <h2><u >Funding Norms for NGOs</u></h2><br/>
         <h4> Norms for Financial Assistance to NGOs </h4>
