--- a/src/app/ngo/ngoContent/register/register.component.html
+++ b/src/app/ngo/ngoContent/register/register.component.html
@@ -1,4 +1,4 @@
-<p>register works!</p>
+<app-header></app-header>
 <div class="card mt-5" style="margin:auto;width: 600px;">
     <div class="card-body">
       <h5 class="card-title">Login</h5>
