--- a/src/app/step/stepContent/faq/faq.component.html
+++ b/src/app/step/stepContent/faq/faq.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
     <h2 style="color: mediumpurple">FAQS</h2><br/>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" style="text-align: left;font-size: x-large">What is STEP ?</button>
