--- a/src/app/ngo/ngoContent/criteria/criteria.component.html
+++ b/src/app/ngo/ngoContent/criteria/criteria.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
     <h2 style="color: mediumpurple">Criteria</h2><br/>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" style="text-align: left;font-size: x-large">What are the Categories of NGOs for Registration ?</button>
