--- a/src/app/step/stepContent/guidelines/guidelines.component.html
+++ b/src/app/step/stepContent/guidelines/guidelines.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class=container>
         <h2 ><u>Guidelines for STEP</u></h2>
         <p> NOTE: Your email address given at the time of registration is your LOGIN ID.</p>
