--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1> Virago</h1>
-<app-header></app-header>
-<app-body></app-body>
+<h1> Virago</h1> <br />
+<app-header></app-header> <br />
+<app-body></app-body> <br />
 <app-footer></app-footer>
