--- a/src/app/step/stepContent/registration/registration.component.html
+++ b/src/app/step/stepContent/registration/registration.component.html
@@ -1,27 +1,73 @@
 <app-header></app-header>
 <div class="card mt-5" style="margin:auto;width: 600px;">
     <div class="card-body">
-      <h5 class="card-title">Login</h5>
+      <h5 class="card-title">Register</h5>
       <div class="form-group">
         <label for="name">Full Name</label>
-        <input type="text" class="form-control" id="stepname" placeholder="step Name">
+        <input type="text" class="form-control" [(ngModel)]="name" name="name" id="stepname" placeholder="step Name" required />
+        <span *ngIf="vname">Error</span>
       </div>
       <div class="form-group">
         <label for="stepemail">Email</label>
-        <input type="text" class="form-control" id="stepemail" placeholder="Email Address">
+        <input type="text" class="form-control" [(ngModel)]="email" name="email" id="stepemail" placeholder="Email Address" required />
+        <span *ngIf="vemail">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="stepdob">Date of Birth</label>
+        <input type="date" class="form-control" [(ngModel)]="date" name="date" id="stepdate" placeholder="Date of Birth" required />
+        <span *ngIf="vdate">Error</span>
       </div>
       <div class="form-group">
         <label for="contact">Contact No. </label>
-        <input type="number" class="form-control" id="contact" placeholder="Contact Number">
+        <input type="number" class="form-control" [(ngModel)]="contactno" name="contactno" id="contact" placeholder="Contact Number" required />
+        <span *ngIf="vcontactno">Error</span>
       </div>
       <div class="form-group">
         <label for="certificate">Adhar Card number</label>
-        <input type="number" class="form-control" id="adharnum" placeholder="Adhar number">
+        <input type="number" class="form-control" [(ngModel)]="adharno" name="adharno" id="adharnum" placeholder="Adhar number" required />
+        <span *ngIf="vadharno">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">Marital Status</label>
+        <input type="text" class="form-control" [(ngModel)]="mstatus" name="mstatus" id="mstatus" placeholder="Marital Status" required />
+        <span *ngIf="vmstatus">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">Highest Qualification</label>
+        <input type="text" class="form-control" [(ngModel)]="hqualification" name="hqualification" id="hqualification" placeholder="Highest Qualification" required />
+        <span *ngIf="vhqualification">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">Address</label>
+        <input type="text-area" class="form-control" [(ngModel)]="address" name="address" id="address" placeholder="Address" required />
+        <span *ngIf="vaddress">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">State</label>
+        <input type="text" class="form-control" [(ngModel)]="state" name="state" id="state" placeholder="State" required />
+        <span *ngIf="vstate">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">District</label>
+        <input type="text" class="form-control" [(ngModel)]="district" name="district" id="district" placeholder="District" required />
+        <span *ngIf="vdistrict">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="certificate">Pincode</label>
+        <input type="number" class="form-control" [(ngModel)]="pincode" name="pincode" id="pincode" placeholder="Pincode" required />
+        <span *ngIf="vpincode">Error</span>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="steppassword" placeholder="Password">
+        <input type="password" class="form-control" [(ngModel)]="steppassword" name="steppassword" id="steppassword" placeholder="Password" required />
+        <span *ngIf="vsteppassword">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="cpassword">Confirm Password</label>
+        <input type="password" class="form-control" [(ngModel)]="stepcpassword" name="stepcpassword" id="stepcpassword" placeholder="Confirm Password" required />
+        <span *ngIf="vstepcpassword">Error</span>
       </div>
       <button type="submit" class="btn btn-primary" (click)="stepregister()">Register</button>
     </div>
   </div>
+  <br />
