--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,2 +1,4 @@
-<p style="text-align: center;font-size: larger;"><b>MINISTRY OF WOMEN & CHILD DEVELOPMENT</b></p>
+<div class="heading">
+<p ><b>MINISTRY OF WOMEN & CHILD DEVELOPMENT</b></p>
+</div>
 <router-outlet></router-outlet>
