--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<h1> Virago</h1>
+<div class="mainlogo">
+    <img src="/assets/image.png" alt="logo" style="padding-left:15%;"> 
+</div>
+<div class="tagname"> 
+    <h5>Empowering Women</h5>
+    
+    
+</div>
+
 <app-header></app-header>
 <app-body></app-body>
 <app-footer></app-footer>
