--- a/src/app/homeComponent/home/home.component.html
+++ b/src/app/homeComponent/home/home.component.html
@@ -1,1 +1,56 @@
+<div class="container">
+    
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+  
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../../assets/Home1.jpg" alt="Image" style="width:100%; height:300px;">
+        </div>
+  
+        <div class="item">
+          <img src="../../assets/Home4.jpg" alt="Image" style="width:100%;height:300px;">
+        </div>
+      
+        <div class="item">
+          <img src="../../assets/Home3.jpg" alt="Image" style="width:100%;height:300px;">
+        </div>
+      </div>
+  
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <br/><br/>
 
+  <div class="card"    >
+    <img src="../../assets/Card1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4>Why Women & Girls?</h4>
+      <p class="card-text">When more women work, economies grow. An increase in female labour force participation—or a reduction in the gap between women’s and men’s labour force participation—results in faster economic growth..</p>
+     
+    </div>
+  </div>
+
+  <div class="card" >
+    <img src="../../assets/Card2.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4>Dignified Work</h4>
+      <p class="card-text">75%* of Chef workers globally are women. We want to ensure they are respected at work and their voices are heard.</p>
+     
+    </div>
+  </div>
+  
