--- a/src/app/step/header/header.component.html
+++ b/src/app/step/header/header.component.html
@@ -1,22 +1,22 @@
 <div class="container-fluid">
-  <div class="row" style="height:90px;background-color:brown;padding-top: 10px; color:white;text-align:center;">
+  <div class="row">
     <div class="col-lg-12">
-      <h1>Support to Training & Employment Programme (STEP)</h1>
+      <h3>Support To Training & Employment Programme (STEP)</h3>
     </div>
   </div>
 </div>
-<nav class="navbar navbar-inverse" style="background-color:	brown">
-  <div class="container-fluid" style="height:65px;margin-top:15px;padding-top: 20px;">
+
+  <div class="container-fluid">
     <div class="navbar-header">
       <ul class="nav nav-pills" role="tablist" style="float:right;">
-        <li><a [routerLink]="['/step/stepabout']" style="color:orange;">About Us</a></li>
-        <li><a [routerLink]="['/step/guidelines']" style="color:orange;">Guidelines</a></li>
-        <li><a [routerLink]="['/step/training']" style="color:orange;">Training Sectors</a></li>
-        <li><a [routerLink]="['']" style="color:orange;">NGOs</a></li>
-        <li><a [routerLink]="['/step/registration']" style="color:orange;">Registration</a></li>
-        <li><a [routerLink]="['']" style="color:orange;">Status</a></li>
-        <li><a [routerLink]="['/step/stepfaq']" style="color:orange;">FAQ</a></li>
+        <li><a [routerLink]="['/step/stepabout']" >About Us</a></li>
+        <li><a [routerLink]="['/step/guidelines']" >Guidelines</a></li>
+        <li><a [routerLink]="['/step/training']" >Training Sectors</a></li>
+        <li><a [routerLink]="['']" >NGOs</a></li>
+        <li><a [routerLink]="['/step/registration']" >Registration</a></li>
+        <li><a [routerLink]="['']" >Status</a></li>
+        <li><a [routerLink]="['/step/stepfaq']" >FAQ</a></li>
       </ul>
     </div>
   </div>
-</nav>
+
