Added signin, signup and Registration of step. (#14)
* Added Step Validation

* Added signin, signup and registration of step

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1> Virago</h1>
-<app-header></app-header>
-<app-body></app-body>
+
+<div class="Main">
+    <h1> Virago</h1> <br />
+    
+</div>
+<app-header></app-header> <br />
+<app-body></app-body> <br />
 <app-footer></app-footer>
