--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1> Virago</h1> <br />
+
+<div class="Main">
+    <h1> Virago</h1> <br />
+    
+</div>
 <app-header></app-header> <br />
 <app-body></app-body> <br />
 <app-footer></app-footer>
