Added front end

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,16 @@
+
+
 <nav class="navbar navbar-inverse" style="background-color: rgb(61, 3, 61);">
-  <div class="container-fluid" style="height:30px;">
     <div class="navbar-header">
-    <a [routerLink]="['']" class="navbar-brand" style="color:white;">Home</a>
-    </div>
+      <div class="mainlogo">
+        <img src="/assets/image.png" alt="logo" style="padding-left:15%;"> 
+      </div>
+      <div class="tagname"> 
+        <h5>Empowering Women</h5>
+      </div>
+  </div>
     <ul class="nav navbar-nav"> 
+      <li><a [routerLink]="['']" class="navbar-brand" style="color:white;">Home</a></li>
       <li><a [routerLink]="['/step']" style="color:orange;">STEP</a></li>
       <li><a [routerLink]="['/ngo']" style="color:orange;">NGO</a></li>
       <li><a [routerLink]="['/faq']" style="color:orange;">FAQ</a></li>
@@ -14,5 +21,4 @@
       <li><a [routerLink]="['/signin']" id="signin" style="color:orange;">Signin</a></li>
       <li><a [routerLink]="['/signup']" id="signup" style="color:orange;">Sign up</a></li>
     </ul>
-  </div>
 </nav>
