--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,5 @@
-.navbar{
+@media screen and (max-width: 600px) {
+.navbar {
     overflow: auto;
 }
   .navbar-header a {
@@ -6,15 +7,34 @@
     padding: 20px;
     color: white;
     float:right;
+    height: 5px;
   
-   height: 5px;
-   
-    
-    
-   
-  }
+}
   .navbar-header a:hover {
     color:black;
     background-color:pink;
+
   }
   
+}
+  .mainlogo img {
+    
+    width: 100%;
+    margin-left:-17%;
+    height: 75px;
+    
+}
+
+.tagname h5 {
+    font-family: 'Lobster', cursive;
+    display:inline;
+    margin-left: -16%;
+    padding-left:30%;
+    padding-top: 60%;
+    padding-bottom: 10px;
+    font-style: italic;
+    height:2%;
+    color: purple;
+    
+}
+
