--- a/src/app/step/stepContent/registration/registration.component.html
+++ b/src/app/step/stepContent/registration/registration.component.html
@@ -8,7 +8,7 @@ ngNativeValidate>
         <label for="contact">Contact No.</label>
         <input type="number" class="form-control" [(ngModel)]="user.contact_No" name="contactno" [pattern]="contactnoPattern" #udate="ngModel" id="contact" placeholder="Contact Number" required />
         <div *ngIf="mform.errors?.pattern">
-          <span>Date Error</span>
+          <span>Contact No Error</span>
         </div>
       </div>
       <div class="form-group">
