--- a/src/app/step/stepContent/registration/registration.component.html
+++ b/src/app/step/stepContent/registration/registration.component.html
@@ -1,27 +1,56 @@
 <app-header></app-header>
+<form #mform="ngForm" (ngSubmit)="stepregister()" name="step-form" class="form table-responsive"
+ngNativeValidate> 
 <div class="card mt-5" style="margin:auto;width: 600px;">
     <div class="card-body">
-      <h5 class="card-title">Login</h5>
+      <h5 class="card-title">Register</h5>
       <div class="form-group">
-        <label for="name">Full Name</label>
-        <input type="text" class="form-control" id="stepname" placeholder="step Name">
+        <label for="contact">Contact No.</label>
+        <input type="number" class="form-control" [(ngModel)]="user.contact_No" name="contactno" [pattern]="contactnoPattern" #udate="ngModel" id="contact" placeholder="Contact Number" required />
+        <div *ngIf="mform.errors?.pattern">
+          <span>Contact No Error</span>
+        </div>
       </div>
       <div class="form-group">
-        <label for="stepemail">Email</label>
-        <input type="text" class="form-control" id="stepemail" placeholder="Email Address">
+        <label for="Adhar Number">Adhar Card number</label>
+        <input type="number" class="form-control" [(ngModel)]="user.adhar_Number" name="adharno" [pattern]="adharPattern" #uadhar="ngModel" id="adharnum" placeholder="Adhar number" required />
+        <div *ngIf="mform.errors?.pattern">
+          <span>Adhar Error</span>
+        </div>
       </div>
       <div class="form-group">
-        <label for="contact">Contact No. </label>
-        <input type="number" class="form-control" id="contact" placeholder="Contact Number">
+        <label for="Marital Status">Marital Status</label>
+        <input type="text" class="form-control" [(ngModel)]="user.maritial_Status" name="mstatus" id="mstatus" placeholder="Marital Status" required />
+        <span *ngIf="vmstatus">Marital Status Error</span>
       </div>
       <div class="form-group">
-        <label for="certificate">Adhar Card number</label>
-        <input type="number" class="form-control" id="adharnum" placeholder="Adhar number">
+        <label for="Highest Qualification">Highest Qualification</label>
+          <input type="text" class="form-control" [(ngModel)]="user.highest_Qualification" name="hqualification" id="hqualification" placeholder="Highest Qualification" required />
+        <span *ngIf="vhqualification">Error</span>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="steppassword" placeholder="Password">
+        <label for="Address">Address</label>
+          <input type="text-area" class="form-control" [(ngModel)]="user.address" name="address" id="address" placeholder="Address" required />
+        <span *ngIf="vaddress">Error</span>
       </div>
-      <button type="submit" class="btn btn-primary" (click)="stepregister()">Register</button>
+      <div class="form-group">
+        <label for="State">State</label>
+        <input type="text" class="form-control" [(ngModel)]="user.state" name="state" id="state" placeholder="State" required />
+        <span *ngIf="vstate">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="District">District</label>
+        <input type="text" class="form-control" [(ngModel)]="user.district" name="district" id="district" placeholder="District" required />
+        <span *ngIf="vdistrict">Error</span>
+      </div>
+      <div class="form-group">
+        <label for="Pincode">Pincode</label>
+        <input type="number" class="form-control" [(ngModel)]="user.pincode" name="pincode" id="pincode" placeholder="Pincode" required />
+        <span *ngIf="vpincode">Error</span>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Register</button>
     </div>
   </div>
+  </form>
+  <br />
