--- a/src/app/step/stepContent/registration/registrationDashBoard/facility/facility.component.html
+++ b/src/app/step/stepContent/registration/registrationDashBoard/facility/facility.component.html
@@ -1,5 +1,5 @@
 <h3>Search here for Which city you want occomodation?</h3>
-<input type="text" placeholder="search city name" />
+<input type="text" placeholder="search city name" [(ngModel)]=searchbox name="searchbox" />
 
 <table  id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
@@ -19,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let fac of FacilityList; let i=next">
+        <tr *ngFor="let fac of FacilityList | filter:searchbox ">
             <td>
                 {{fac.n_FacName}}
             </td>
