--- a/src/app/step/stepContent/registration/registrationDashBoard/trainingprogramme/trainingprogramme.component.html
+++ b/src/app/step/stepContent/registration/registrationDashBoard/trainingprogramme/trainingprogramme.component.html
@@ -1,5 +1,5 @@
 <h3>Search here for Which Programme you want Training in?</h3>
-<input type="text" placeholder="search city name" />
+<input type="text" placeholder="search city name" [(ngModel)]=searchbox name="searchbox" />
 
 <table  id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
@@ -19,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let prog of TrProgrammeList; let i=next">
+        <tr *ngFor="let prog of TrProgrammeList | filter:searchbox">
             <td>
                 {{prog.n_ProgName}}
             </td>
