Added ui changes

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,2 +1,3 @@
-<p style="text-align: center;font-size: larger;"><b>MINISTRY OF WOMEN & CHILD DEVELOPMENT</b></p>
+<div class="ministryname">MINISTRY OF WOMEN & CHILD DEVELOPMENT</div>
+<br />
 <router-outlet></router-outlet>
