--- a/src/app/step/stepContent/registration/registrationDashBoard/facility/facility.component.html
+++ b/src/app/step/stepContent/registration/registrationDashBoard/facility/facility.component.html
@@ -30,7 +30,7 @@
                 {{fac.n_FacCity}}    
             </td>
             <td>
-                <input type="button" value="Apply" (click)="FacApply()">    
+                <input type="button" value="Apply" (click)="FacApply(fac.n_FacId)">    
             </td>
         </tr>
     </tbody>
