--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse" style="background-color: rgb(61, 3, 61);">
   <div class="navbar-header">
     <div class="mainlogo">
-      <img src="/assets/image.png" alt="logo" style="padding-left:15%;"> 
+      <h3 style="color:white;">Virago</h3>
     </div>
     <div class="tagname"> 
-      <h5>Empowering Women</h5>
+      <h6>Women Empowernment</h6>
     </div>
 </div>
   <ul class="nav navbar-nav"> 
-    <li><a [routerLink]="['']" class="navbar-brand" style="color:white;">Home</a></li>
+    <li><a [routerLink]="['']" class="navbar-brand" style="color:orange;">Home</a></li>
     <li><a [routerLink]="['/step']" style="color:orange;">STEP</a></li>
     <li><a [routerLink]="['/ngo']" style="color:orange;">NGO</a></li>
     <li><a [routerLink]="['/faq']" style="color:orange;">FAQ</a></li>
