--- a/src/app/step/stepContent/registration/registrationDashBoard/trainingprogramme/trainingprogramme.component.html
+++ b/src/app/step/stepContent/registration/registrationDashBoard/trainingprogramme/trainingprogramme.component.html
@@ -1,11 +1,11 @@
 <h3>Search here for Which Programme you want Training in?</h3>
-<input type="text" placeholder="search city name" />
+<input type="text" placeholder="search city name" [(ngModel)]=searchbox name="searchbox" />
 
 <table  id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
             <th>
-                Name
+                Name of Programme
             </th>
             <th>
                 Capacity
@@ -19,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let prog of TrProgrammeList; let i=next">
+        <tr *ngFor="let prog of TrProgrammeList | filter:searchbox">
             <td>
                 {{prog.n_ProgName}}
             </td>
@@ -30,7 +30,7 @@
                 {{prog.n_ProgCity}}    
             </td>
             <td>
-                <input type="button" value="Apply">    
+                <input type="button" value="Apply" (click)="appliedprogramme(prog.n_ProgId)" />    
             </td>
         </tr>
     </tbody>
