--- a/src/app/homeComponent/about/about.component.html
+++ b/src/app/homeComponent/about/about.component.html
@@ -1,19 +1,7 @@
-<p>about works!</p>
-
-<nav class="navbar navbar-inverse" style="background-color:#00008B">
-    <div class="container-fluid" >
-        <div class="navbar-header" style="float:right;">
-        <a class="navbar-brand" href="main.html" target="_self"style="color:white;padding-top:18px;">HOME</a>
-      </div>
-  </div>
-  </nav>
-  
-  
-  
-  <div class="div1">
-      <h1 style="background-color:purple;color:white;">About Us</h1>
-   <img src="2.jpg" style="align:center;">
-     <pre>
+<div class="div1">
+    <h1 style="background-color:purple;color:white;">About Us</h1>
+    <img src="/assets/.jpg" style="align:center;">
+    <pre>
       <p> <b>
        
           NGOs in India have spread like wildfire in the last decade. They are becoming the lifeline of marginalized and disadvantaged communities, giving people a reason to live. 
@@ -38,5 +26,4 @@
   </b>
   </p>
   </pre>
-  </div>
-            
+</div>
