--- a/src/app/ngo/ngoContent/register/register.component.html
+++ b/src/app/ngo/ngoContent/register/register.component.html
@@ -55,7 +55,7 @@ ngNativeValidate>
       </div>
       <div class="form-group">
         <label for="cpassword">Confirm Password</label>
-           <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" id="cpassword" placeholder="Confirm Password" required />
+           <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" id="cpassword" pattern={{upassword.value}}  placeholder="Confirm Password" required />
         <span *ngIf="vcpassword">Error</span>
       </div>
       <button type="submit" class="btn btn-primary">Register</button>
