Added login ngo and services

--- a/src/app/ngo/header/header.component.html
+++ b/src/app/ngo/header/header.component.html
@@ -13,6 +13,7 @@
         <li><a [routerLink]="['/ngo/organisation']" style="color:orange;">Organizations</a></li>
         <li><a [routerLink]="['/ngo/funding']" style="color:orange;">Funding Norms</a></li>
         <li><a [routerLink]="['/ngo/registration']" style="color:orange;">Registration</a></li>
+        <li><a [routerLink]="['/ngo/login']" style="color:orange;">Login</a></li>
         <li><a [routerLink]="['/ngo/ngostatus']" style="color:orange;">Status</a></li>
         <li><a [routerLink]="['/ngo/ngofaq']" style="color:orange;">FAQ</a></li>
     </ul>
