--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -32,8 +32,9 @@ ngNativeValidate>
       </div>
       <div class="form-group">
         <label for="cpassword">Confirm Password</label>
-        <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" id="cpassword" placeholder="Confirm Password" required />
+        <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" pattern={{upassword.value}} id="cpassword" placeholder="Confirm Password" required />
         <span *ngIf="vcpassword">Error</span>
+        <div *ngIf="mform.errors?.pattern"> Password & Confirm Password does not match.</div>
       </div>
       <div class="signup-button">
         <button type="submit" class="btn btn-primary">Sign up</button>
