--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@ ngNativeValidate>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" [(ngModel)]="enduser.email" name="email" [pattern]="emailPattern" #umail="ngModel" id="email" placeholder="Email Address" required />
+        <input type="text" class="form-control" [(ngModel)]="enduser.email" name="email" [pattern]="mailPattern" #umail="ngModel" id="email" placeholder="Email Address" required />
         <div *ngIf="mform.errors?.pattern">
           <span>Email Error</span>
         </div>
