--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@ ngNativeValidate>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" [(ngModel)]="enduser.email" name="email" [pattern]="emailPattern" #umail="ngModel" id="email" placeholder="Email Address" required />
+        <input type="text" class="form-control" [(ngModel)]="enduser.email" name="email" [pattern]="mailPattern" #umail="ngModel" id="email" placeholder="Email Address" required />
         <div *ngIf="mform.errors?.pattern">
           <span>Email Error</span>
         </div>
@@ -32,8 +32,9 @@ ngNativeValidate>
       </div>
       <div class="form-group">
         <label for="cpassword">Confirm Password</label>
-        <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" id="cpassword" placeholder="Confirm Password" required />
+        <input type="password" class="form-control"  [(ngModel)]="cpassword" name="cpassword" pattern={{upassword.value}} id="cpassword" placeholder="Confirm Password" required />
         <span *ngIf="vcpassword">Error</span>
+        <div *ngIf="mform.errors?.pattern"> Password & Confirm Password does not match.</div>
       </div>
       <div class="signup-button">
         <button type="submit" class="btn btn-primary">Sign up</button>
